--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,11 @@
 fastapi==0.100.0
 uvicorn[standard]==0.22.0
 pydantic==2.0.3
+pydantic-settings==2.0.1
 aiohttp==3.8.5
 python-dotenv==1.0.0
 websockets==11.0.3
+beautifulsoup4==4.12.2
+lxml==5.1.0
+httpx==0.24.1
+jinja2==3.1.2
